syntax = "proto3";

option csharp_namespace = "GrpcClient";

import "google/protobuf/timestamp.proto";

package customer;

service Customer {
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
}

message CustomerData {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  int32 age = 4;
  bool vip = 5;
}

message GetByIdRequest {
  int32 id = 1;
}

message GetByIdResponse {
  CustomerData customer = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message GetAllRequest { }

message GetAllResponse {
  repeated CustomerData customers = 1;
  google.protobuf.Timestamp timestamp = 2;
}